# project5

./: AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  CommentAutomaton.h  Database.h  DatalogProgram.h  EOFAutomaton.h  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.h  Interpreter.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  Matcher.h  MultiplyAutomaton.h  Parameter.h  Parser.h  PeriodAutomaton.h  Predicate.h  QMarkAutomaton.h  QueriesAutomaton.h  Relation.h  RightParenAutomaton.h  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.cpp  Token.h  Tuple.h  Undefined.h  Vertex.h  main.cpp
